# battery-tester

./: .clinerules  .gitignore  README.md  amp  platformio.ini
data/: index.html
docs/: HARDWARE.md
lib/BatteryChannel/: BatteryChannel.cpp  BatteryChannel.h
lib/WebServer/: WebServer.cpp  WebServer.h
lib/WifiManager/: WifiManager.cpp  WifiManager.h
models/: 18350 holder.3mf  18350 holder.blend  18350 holder.blend1  18350 holder.stl
python/: pyproject.toml  requirements.txt
python/battery_tester/: __init__.py  __main__.py  cli.py  client.py
python/tests/: __init__.py  test_client.py
python/tests/fixtures/: sample_history.csv
results/: capacity_estimator.py
src/: config.h  main.cpp  secrets.example.h
tools/: build.sh  monitor-upload.sh  monitor.sh  upload.sh
