[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-tester"
version = "0.1.0"
description = "Python companion tools for the ESP8266 5-channel battery tester"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ken" }]
dependencies = [
    "requests>=2.31.0",
    "pyserial>=3.5",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.scripts]
battery-tester = "battery_tester.cli:main"

[tool.setuptools.packages.find]
include = ["battery_tester*"]